--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,11 @@
-<div>
-  <p>Players</p>
+<div class="left">
+  <h3>Players</h3>
   <div *ngFor="let player of players">
     <span>Name: {{ player.components.Common.name }}  HP: {{ player.components.Player?.hp || 25 }}</span>
   </div>
 </div>
-<div>
-  <p>Forge Row</p>
-  <div *ngFor="let card of forgeRow">
-    <span>Name: {{ card.components.Common.name }}  Cost: {{ card.components.Card?.cost || 0 }}</span>
-  </div>
-</div>
-<div>
-  <p>Units</p>
+<div class="center">
+  <h3>Units</h3>
   <div *ngFor="let unit of units">
     <span>Name: {{ unit.components.Common.name }}</span>
     <span>  Str: {{ unit.components.Unit.strength }}</span>
@@ -22,11 +16,15 @@
     <span *ngIf="unit.components.Unit.endurance">  Endurance</span>
     <span *ngIf="unit.components.Unit.unblockable">  Unblockable</span>
   </div>
-</div>
-<div>
   <p>Played Spells</p>
   <div *ngFor="let card of playedSpells">
     <span>Name: {{ card.components.Common.name }}</span>
+  </div>
+</div>
+<div class="right">
+  <h3>Forge Row</h3>
+  <div *ngFor="let card of forgeRow">
+    <app-card [card]="card" (click)="selectEntity(card.id)"></app-card>
   </div>
 </div>
 
