--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div class="left">
   <h3>Players</h3>
-  <div *ngFor="let player of players">
-    <span>Name: {{ player.components.Common.name }}  HP: {{ player.components.Player?.hp || 25 }}</span>
-  </div>
+  <app-player *ngFor="let player of players" [player]="player" (click)="selectEntity(player.id)"></app-player>
 </div>
 <div class="center">
   <h3>Units</h3>
@@ -23,9 +21,7 @@
 </div>
 <div class="right">
   <h3>Forge Row</h3>
-  <div *ngFor="let card of forgeRow">
-    <app-card [card]="card" (click)="selectEntity(card.id)"></app-card>
-  </div>
+  <app-card *ngFor="let card of forgeRow" [card]="card" (click)="selectEntity(card.id)"></app-card>
 </div>
 
 <router-outlet></router-outlet>
