--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -7,13 +7,23 @@
   width: 250px
   padding: 1rem
 
+:host > *
+  margin-bottom: 1rem
+
 .header
   display: flex
 
 .name
   flex: 1
   font-weight: bold
-  margin-right: 1rem
 
-.hp
-  color: green
+.strength
+  color: red
+  margin-left: 1rem
+
+.defense
+  color: gray
+  margin-left: 1rem
+
+.attributes
+  color: orange
