--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -1,17 +1,19 @@
 :host
   border: solid black 1px
+  cursor: pointer
   display: flex
   flex-direction: column
-  margin: 10px
-  min-width: 250px
-  padding: 10px
+  margin: 1rem
+  width: 250px
+  padding: 1rem
 
 .header
   display: flex
 
 .name
   flex: 1
-  margin-right: 10px
+  font-weight: bold
+  margin-right: 1rem
 
 .cost
   color: blue
