--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -2,3 +2,6 @@
   <span class="name">{{ player.name }}</span>
   <span class="hp">{{ player.hp }}</span>
 </div>
+<div class="actions">
+  <app-action *ngFor="let action of player.actions" [action]="action"></app-action>
+</div>
