--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -15,13 +15,18 @@
   flex: 1
   font-weight: bold
 
+.stats
+  display: flex
+  margin-bottom: 1rem
+
 .strength
   color: red
-  margin-left: 1rem
+  margin-right: 1rem
 
 .defense
   color: gray
-  margin-left: 1rem
+  margin-right: 1rem
 
-.attributes
+.attribute
   color: orange
+  flex: 1
