--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,6 +2,9 @@
   <span class="name">{{ card.name }}</span>
   <span class="cost">${{ card.cost }}</span>
 </div>
+<div class="description">
+  {{ card.description }}
+</div>
 <div class="actions">
   <app-action *ngFor="let action of card.actions" [action]="action"></app-action>
 </div>
