--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -16,3 +16,8 @@
   display: flex
   flex-wrap: wrap
   justify-content: center
+
+.play-area
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
