--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
   <div class="units">
     <app-unit  *ngFor="let unit of defendingUnits" [unit]="unit" (click)="selectEntity(unit.id)"></app-unit>
   </div>
-  <h3>Spells</h3>
-  <div class="spells">
-    <app-card *ngFor="let card of spells" [card]="card" (click)="selectEntity(card.id)"></app-card>
+  <h3>Play Area</h3>
+  <div class="play-area">
+    <app-card *ngFor="let card of playArea" [card]="card" (click)="selectEntity(card.id)"></app-card>
   </div>
 </div>
 <div class="right">
