--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -3,21 +3,21 @@
   cursor: pointer
   display: flex
   flex-direction: column
-  margin: 1rem
-  width: 250px
-  padding: 1rem
+  margin: 5px
+  width: 300px
+  padding: 10px
 
 .header
   display: flex
-  margin-bottom: 1rem
+  margin-bottom: 5px
 
 .name
   flex: 1
   font-weight: bold
-  margin-right: 1rem
+  margin-right: 5px
 
 .cost
   color: blue
 
 .description
-  margin-bottom: 1rem
+  margin-bottom: 5px
