--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -3,22 +3,22 @@
   cursor: pointer
   display: flex
   flex-direction: column
-  margin: 1rem
-  width: 250px
-  padding: 1rem
+  margin: 5px
+  width: 200px
+  padding: 10px
 
 .header
   display: flex
-  margin-bottom: 1rem
+  margin-bottom: 5px
 
 .name
   flex: 1
   font-weight: bold
-  margin-right: 1rem
+  margin-right: 5px
 
 .hp
   color: green
-  margin-right: 1rem
+  margin-right: 5px
 
 .powerPool
   color: blue
