--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -3,13 +3,13 @@
   cursor: pointer
   display: flex
   flex-direction: column
-  margin: 1rem
-  width: 250px
-  padding: 1rem
+  margin: 5px
+  width: 300px
+  padding: 10px
 
 .header
   display: flex
-  margin-bottom: 1rem
+  margin-bottom: 5px
 
 .name
   flex: 1
@@ -17,19 +17,20 @@
 
 .stats
   display: flex
-  margin-bottom: 1rem
+  margin-bottom: 5px
 
 .strength
   color: red
-  margin-right: 1rem
+  margin-right: 5px
 
 .defense
   color: gray
-  margin-right: 1rem
+  margin-right: 5px
 
 .attribute
   color: orange
   flex: 1
+  margin-right: 5px
 
 .description
-  margin-bottom: 1rem
+  margin-bottom: 5px
