simple highlighting targets

--- a/src/app/action/action.component.html
+++ b/src/app/action/action.component.html
@@ -1,2 +1,4 @@
 <button (click)="beginAction($event)">{{action.name}}</button>
-<span *ngFor="let target of targets"> {{ target }}</span>
+<div *ngIf="action.maxInputCount > 1">
+  Max targets: {{ action.maxInputCount }}
+</div>
