--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -7,6 +7,12 @@
   width: 300px
   padding: 10px
 
+:host(.targetable)
+  border-color: red
+
+:host(.targetted)
+  border-color: green
+
 .header
   display: flex
   margin-bottom: 5px
