--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -1,17 +1,11 @@
+@use '../targetable'
+
 :host
-  border: solid black 1px
-  cursor: pointer
   display: flex
   flex-direction: column
   margin: 5px
   width: 300px
   padding: 10px
-
-:host(.targetable)
-  border-color: red
-
-:host(.targetted)
-  border-color: green
 
 .header
   display: flex
