--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,23 +1,20 @@
 :host
   display: flex
 
-.center
+.left
   align-items: center
   display: flex
-  flex: 1
+  flex: 2
   flex-direction: column
 
-.left, .right
+.right
   align-items: center
   display: flex
+  flex: 3
   flex-direction: column
 
-.units
+.entity-container
   display: flex
   flex-wrap: wrap
   justify-content: center
-
-.play-area
-  display: flex
-  flex-wrap: wrap
-  justify-content: center
+  min-height: 100px
