use new card data

--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -4,8 +4,9 @@
   display: flex
   flex-direction: column
   margin: 5px
-  width: 300px
   padding: 10px
+  width: 300px
+  word-break: break-word
 
 .header
   display: flex
@@ -14,6 +15,14 @@
 .name
   flex: 1
   font-weight: bold
+  margin-right: 5px
+
+.kind
+  font-style: italic
+  margin-right: 5px
+
+.strength
+  color: red
   margin-right: 5px
 
 .cost
