--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -4,8 +4,9 @@
   display: flex
   flex-direction: column
   margin: 5px
-  width: 300px
   padding: 10px
+  width: 300px
+  word-break: break-word
 
 .header
   display: flex
