--- a/src/app/action/action.component.html
+++ b/src/app/action/action.component.html
@@ -1,4 +1,4 @@
 <button (click)="beginAction($event)">{{action.name}}</button>
-<div *ngIf="action.maxTargetCount > 1">
-  Max targets: {{ action.maxTargetCount }}
+<div *ngIf="action.maxInputCount > 1">
+  Max targets: {{ action.maxInputCount }}
 </div>
