--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -1,6 +1,9 @@
 <div class="header">
   <span class="name">{{ unit.name }}</span>
 </div>
+<div class="description">
+  {{ unit.description }}
+</div>
 <div class="stats">
   <span class="strength">🗡️{{ unit.strength }}</span>
   <span class="defense">🛡️{{ unit.defense }}</span>
