--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -9,12 +9,14 @@
   word-break: break-word
 
 .header
+  align-items: center
   display: flex
   margin-bottom: 5px
 
 .name
   flex: 1
   font-weight: bold
+  margin-left: 5px
   margin-right: 5px
 
 .kind
