--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -18,3 +18,8 @@
   flex-wrap: wrap
   justify-content: center
   min-height: 100px
+
+.throne-deck
+  align-items: center
+  display: flex
+  flex-direction: column
