--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -3,6 +3,9 @@
   <span class="hp">❤️ {{ player.hp }}</span>
   <span *ngIf="player.powerPool > 0" class="powerPool">⚡{{ player.powerPool }}</span>
 </div>
+<div class="flash-tokens">
+  Flash tokens: {{ player.flashTokens }}
+</div>
 <div class="actions">
   <app-action *ngFor="let action of player.actions" [action]="action"></app-action>
 </div>
