--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -19,6 +19,11 @@
   justify-content: center
   min-height: 100px
 
+.mercenary-deck
+  align-items: center
+  display: flex
+  flex-direction: column
+
 .throne-deck
   align-items: center
   display: flex
