--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
       <app-card appTargetable [entityId]="mercenaryDeck[0].id" [card]="mercenaryDeck[0]"></app-card>
     </div>
   </div>
+  <h5>Forge row</h5>
   <div class="entity-container">
     <app-card appTargetable *ngFor="let card of forgeRow" [entityId]="card.id" [card]="card"></app-card>
   </div>
