--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="left">
   <h4>Players</h4>
-  <div class="entity-container">
-    <app-player appTargetable *ngFor="let player of players" [entityId]="player.id" [player]="player"></app-player>
+  <div class="entity-container" *ngIf="worldView">
+    <app-player appTargetable *ngFor="let player of worldView.players" [entityId]="player.id" [player]="player"></app-player>
   </div>
   <h4>Forge</h4>
   <div class="entity-container">
