--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -4,7 +4,7 @@
   <span *ngIf="player.powerPool > 0" class="powerPool">⚡{{ player.powerPool }}</span>
 </div>
 <div class="flash-tokens">
-  Flash tokens: {{ player.flashTokens }}
+  Warp tokens: {{ player.warpTokens }}
 </div>
 <div class="actions">
   <app-action *ngFor="let action of player.actions" [action]="action"></app-action>
