--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header mat-body-2">
   <span class="name">{{ player.name }}</span>
   <span class="hp">❤️ {{ player.hp }}</span>
   <span *ngIf="player.powerPool > 0" class="powerPool">⚡{{ player.powerPool }}</span>
