--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -14,6 +14,7 @@
   flex-direction: column
 
 .entity-container
+  align-items: flex-start
   display: flex
   flex-wrap: wrap
   justify-content: center
