--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -14,7 +14,6 @@
 
 .name
   flex: 1
-  font-weight: bold
 
 .stats
   display: flex
@@ -25,11 +24,10 @@
   margin-right: 5px
 
 .defense
-  color: gray
   margin-right: 5px
 
 .attribute
-  color: orange
+  color: red
   flex: 1
   margin-right: 5px
 
