--- a/src/app/action/action.component.html
+++ b/src/app/action/action.component.html
@@ -1,10 +1,10 @@
 
 <ng-container *ngIf="!targeting; else renderTargeting">
-  <button (click)="beginAction($event)" [disabled]="!action.canTrigger">{{ action.name }}</button>
+  <button mat-stroked-button (click)="beginAction($event)" [disabled]="!action.canTrigger">{{ action.name }}</button>
 </ng-container>
 <ng-template #renderTargeting>
-  <button (click)="executeAction($event)" [disabled]="!canExecute">Execute</button>
-  <button (click)="cancelAction($event)">Cancel</button>
+  <button mat-stroked-button color="primary" (click)="executeAction($event)" [disabled]="!canExecute">Execute</button>
+  <button mat-stroked-button color="warn" (click)="cancelAction($event)">Cancel</button>
 </ng-template>
 <ng-container *ngIf="action.minInputCount > 1">
   <div *ngIf="action.minInputCount == action.maxInputCount; else renderMinMax">
