--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -14,6 +14,4 @@
 <div class="description mat-body-1">
   {{ card.description }}
 </div>
-<div class="actions">
-  <app-action *ngFor="let action of card.actions" [action]="action"></app-action>
-</div>
+<app-actions [actions]="card.actions"></app-actions>
