--- a/src/app/action/action.component.sass
+++ b/src/app/action/action.component.sass
@@ -2,6 +2,9 @@
   align-items: center
   display: flex
   margin: 5px 0
+  max-width: 100%
 
 button
   margin-right: 5px
+  overflow: hidden
+  text-overflow: ellipsis
