--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -12,16 +12,19 @@
   display: flex
   margin-bottom: 5px
 
-.wrap-tokens
+.stats
+  display: flex
   margin-bottom: 5px
+
+.wrap-tokens
+  margin-right: 5px
+  flex: 1
 
 .name
   flex: 1
-  margin-right: 5px
 
 .hp
   color: green
-  margin-right: 5px
 
 .powerPool
   color: blue
