--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -11,15 +11,13 @@
 .header
   align-items: center
   display: flex
-  margin-bottom: 5px
 
 .name
   flex: 1
-  margin-left: 5px
-  margin-right: 5px
 
-.kind
-  margin-right: 5px
+.stats
+  display: flex
+  margin-bottom: 5px
 
 .strength
   color: red
@@ -27,6 +25,8 @@
 
 .cost
   color: blue
+  margin-right: 5px
+  flex: 1
 
 .description
   margin-bottom: 5px
