--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,9 +1,11 @@
 <div class="header mat-body-2">
   <span class="name">{{ player.name }}</span>
   <span class="hp">❤️ {{ player.hp }}</span>
-  <span *ngIf="player.powerPool > 0" class="powerPool">⚡{{ player.powerPool }}</span>
 </div>
-<div class="wrap-tokens">
-  Warp tokens: {{ player.warpTokens }}
+<div class="stats">
+  <span class="wrap-tokens">
+    Warp tokens: {{ player.warpTokens }}
+  </span>
+  <span *ngIf="player.powerPool > 0" class="powerPool">⚡ {{ player.powerPool }}</span>
 </div>
 <app-actions [actions]="player.actions"></app-actions>
