--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -11,13 +11,16 @@
 .header
   align-items: center
   display: flex
+  margin-bottom: 5px
 
 .name
   flex: 1
+  font-size: 1.3em
 
 .stats
   display: flex
   margin-bottom: 5px
+  font-size: 1.2em
 
 .strength
   color: red
