--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -22,9 +22,14 @@
 
 .name
   flex: 1
+  font-size: 1.3em
 
 .hp
   color: green
+  font-size: 1.2em
+
+.stats
+  font-size: 1.2em
 
 .powerPool
   color: blue
