--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -8,6 +8,12 @@
   width: 300px
   word-break: break-word
 
+:host(.attacking)
+  background-color: #FFEBEE
+
+:host(.defending)
+  background-color: #E8F5E9
+
 .header
   display: flex
   margin-bottom: 5px
