--- a/src/app/_targetable.sass
+++ b/src/app/_targetable.sass
@@ -2,15 +2,14 @@
 
 :host
   @include mat-elevation(4)
-  background-color: #FAFAFA
 
 :host(.targetable)
   @include mat-elevation(12)
-  background-color: #FFFDE7
+  background-color: #FFFDE7 !important
   border: solid 2px #FFEB3B
   cursor: pointer
 
 :host(.targetted)
   @include mat-elevation(12)
-  background-color: #FFEBEE
+  background-color: #FFEBEE !important
   border: solid 2px #F44336
